# llm-ocr

./: .gitignore  README.md  evaluate.py  main.py  ocr.py  pyproject.toml  run.py
notebooks/: analyze.py  scratch.py  test.py
reports/: base_results.json  base_scores.csv  base_scores_desc.csv  rag_results.json  rag_scores.csv  rag_scores_desc.csv
src/: baseProcessor.py  config.py  evaluate.py  main.py  ragProcessor.py
src/chat/: base_chat.py  prompt_templates.py  rag_chat.py
src/index/: base.py  chunking.py  faiss.py  index_faiss.py  index_lancedb.py  lancedb.py
src/index/tests/: test_chunking.py  test_pdf_to_md.py
src/ocr/: ocr_pymupdf.py  ocr_textract.py
src/scripts/: ocr_aws.py  ocr_mupdf.py  pdf_to_md.py
src/scripts/tests/: test_embed_text.py  test_pdf_to_md.py
