[project]
name = "llm-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.33",
    "faiss-cpu>=1.11.0",
    "loguru>=0.7.3",
    "polars>=1.27.1",
    "pymupdf4llm>=0.0.21",
    "sentence-transformers>=4.1.0",
    "unstructured[all-docs]>=0.17.2",
]

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.37.33",
    "marimo>=0.13.2",
    "moto>=5.1.3",
]

[tool.marimo.runtime]
pythonpath = ["."]
