[project]
name = "llm-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "boto3>=1.37.33",
    "faiss-cpu>=1.11.0",
    "gradio>=5.29.0",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "lancedb>=0.22.0",
    "loguru>=0.7.3",
    "openai>=1.76.2",
    "polars>=1.27.1",
    "pymupdf4llm>=0.0.21",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "unstructured[all-docs]>=0.17.2",
]

[dependency-groups]
dev = [
    "boto3-stubs[full]>=1.37.33",
    "marimo>=0.13.2",
    "moto>=5.1.3",
]

[tool.marimo.runtime]
pythonpath = ["."]
